@@ -45,11 +45,11 @@ void server_main(DAEMONCONFIG *config);
 int do_keygen(DAEMONCONFIG *config, KSM_POLICY* policy, hsm_ctx_t *ctx);
 int do_communication(DAEMONCONFIG *config, KSM_POLICY* policy);
 
-int commGenSignConf(char* zone_name, int zone_id, char* current_filename, KSM_POLICY *policy, int* signer_flag, int run_interval, int man_key_gen, char** key_string);
+int commGenSignConf(char* zone_name, int zone_id, char* current_filename, KSM_POLICY *policy, int* signer_flag, int run_interval, int man_key_gen, char** key_string, const char* DSSubmitCmd);
 int commKeyConfig(void* context, KSM_KEYDATA* key_data);
 int allocateKeysToZone(KSM_POLICY *policy, int key_type, int zone_id, uint16_t interval, const char* zone_name, int man_key_gen, int rollover_scheme);
 int read_zonelist_filename(const char* filename, char** zone_list_filename);
 int do_purge(int interval, int policy_id);
-int NewDSSet(int zone_id, const char* zone_name);
+int NewDSSet(int zone_id, const char* zone_name, const char* DSSubmitCmd);
 
 #endif /* ENFORCER_H */
